testsuite/tests/parser/should_fail/T10196Fail2.hs
module T10196Fail2 where

-- Variables are not allowed to start with a modifier letter.
ᵦ = 1
