testsuite/tests/parser/should_fail/T10196Fail2.stderr

T10196Fail2.hs:4:1: error: [GHC-21231]
    lexical error at character '\7526'
